# paint-

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
documentation/: paintpp.puml
src/: CMakeLists.txt  main.cpp
src/gui/: Icons.qrc  controller.cpp  controller.h  mainwindow.ui
src/init_project/: init_project.cpp  init_project.h
src/model/: BFS.cpp  BFS.h  image.cpp  image.h  matrix_image.cpp  matrix_image.h  paintpp.cpp  paintpp.h  point_image.h
src/test/: tester.cpp  tester.h
src/utils/: MagicSelect.h  bfsPaintFill.h  doublyLinkedList.cpp  doublyLinkedList.h  freeSelect.h  rectanSelect.h  utilities.cpp  utilities.h  vectorMovement.cpp  vectorMovement.h  vectorStructure.cpp  vectorStructure.h
